<resources>
    <string name="app_name">C and G</string>

    <!--<string name="font_regular">opensanscondensed_light.ttf</string>-->
   <!-- <string name="font_regular" translatable="false">opensanscondensed_bold.ttf</string>
    <string name="font_bold" translatable="false">opensanscondensed_bold.ttf</string>-->

    <string name="font_regular" translatable="false">sourcesanspro_semibold.ttf</string>
    <string name="font_bold" translatable="false">sourcesanspro_black.ttf</string>
    <string name="log_in">LOG IN</string>
    <string name="enter_user_id">Enter User Id</string>
    <string name="enter_password">Enter Password</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="exit">Touch again to EXIT</string>
    <string name="logout">LOGOUT</string>
    <string name="logout_small">Logout</string>
    <string name="logout_conformation">Are you sure want to logout ?</string>
    <string name="cancel">Cancel</string>
    <string name="transactions">Transactions</string>
    <string name="credit_notes">Credit Notes</string>
    <string name="customers">Customers</string>
    <string name="quotations">Quotations</string>
    <string name="invoices">Invoices</string>
    <string name="home">Home</string>
    <string name="today">Today</string>
    <string name="this_week">THIS WEEK</string>
    <string name="this_month">THIS MONTH</string>
    <string name="all_invoices">ALL INVOICES</string>
    <string name="all_quotations">ALL QUOTATIONS</string>
    <string name="all_credit_notes">ALL CREDIT NOTES</string>
    <string name="pound" translatable="false">£</string>
    <string name="profile_detail">PROFILE DETAIL</string>
    <string name="ledger">LEDGER</string>
    <string name="monthly_statement">MONTHLY STATEMENTS</string>

    <string name="check_internet_connection">Please check your internet connection.</string>
    <string name="something_wrong">Something went wrong.</string>
    <string name="all_product_data">All Data</string>
    <string name="api_key">cg@123</string>

    <string name="remove_today_quotation">remove_today_quotation</string>
    <string name="remove_week_quotation">remove_week_quotation</string>
    <string name="remove_month_quotation">remove_month_quotation</string>
    <string name="remove_year_quotation">remove_year_quotation</string>

    <string name="c_g_recommends_that_you_update_to_the_latest_version_you_can_keep_using_this_app_while_downloading_the_update">C&amp;G recommends that you update to the latest version. You can keep using this app while downloading the update.</string>
    <string name="sale">Sale</string>
    <string name="select_month">Select Month</string>
    <string name="select_year">Select Year</string>

    <string-array name="month_name">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="month_position">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="year">
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
    </string-array>

    <array name="waveSideBarLetters">
      <!--  <item>\u0023</item>
        <item>\u2606</item>-->
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </array>

</resources>