<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@android:color/white"
                android:gravity="center|bottom"
                android:orientation="vertical"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                android:visibility="visible">

                <TextView
                    android:id="@+id/txt_nav_header_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:text="android.studio@android.com"
                    android:paddingBottom="@dimen/_5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/txt_color2"
                    android:visibility="gone"
                    tools:ignore="MissingPrefix" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true">

                    <TextView
                        android:id="@+id/txt_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/txt_color2"
                        android:textStyle="bold"
                        tools:ignore="MissingPrefix" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_alignParentBottom="true"
                    android:background="#dedede" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:visibility="visible"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/c_and_g_drawer_img"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/txt_nav_header_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingBottom="@dimen/_2dp"
                    android:layout_alignParentBottom="true"
                    android:text="Android Studio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/txt_color2"
                    android:layout_above="@id/txt_nav_header_email"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/linSale"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/_35dp"
                        android:paddingBottom="@dimen/_35dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/ic_nav_sales"
                            android:tint="@color/drawer_color"
                            android:layout_gravity="center">

                        </ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sale"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:textSize="18dp">

                        </TextView>

                    </LinearLayout>

                    <View
                        android:layout_width="1.5dp"
                        android:layout_height="match_parent"
                        android:background="@color/drawer_line">

                    </View>

                    <LinearLayout
                        android:id="@+id/linInvoice"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/_35dp"
                        android:paddingBottom="@dimen/_35dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/ic_nav_invoice"
                            android:tint="@color/drawer_color"
                            android:layout_gravity="center">

                        </ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/invoices"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_marginTop="5dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18dp">

                        </TextView>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@color/drawer_line">

                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/linQuotation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/_35dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:paddingBottom="@dimen/_35dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/ic_nav_quatation"
                            android:tint="@color/drawer_color"
                            android:layout_gravity="center">

                        </ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/quotations"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginTop="5dp"
                            android:textSize="18dp">

                        </TextView>

                    </LinearLayout>

                    <View
                        android:layout_width="1.5dp"
                        android:layout_height="match_parent"
                        android:background="@color/drawer_line">

                    </View>

                    <LinearLayout
                        android:id="@+id/linCustomer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/_35dp"
                        android:paddingBottom="@dimen/_35dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/ic_nav_cusomers"
                            android:tint="@color/drawer_color"
                            android:layout_gravity="center">

                        </ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/customers"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginTop="5dp"
                            android:textSize="18dp">

                        </TextView>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@color/drawer_line">

                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:id="@+id/linCreditNotes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/_35dp"
                        android:paddingBottom="@dimen/_35dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/ic_nav_crnote"
                            android:tint="@color/drawer_color"
                            android:layout_gravity="center">

                        </ImageView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/credit_notes"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18dp">

                        </TextView>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@color/drawer_line">

                </View>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="bottom|center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout_small"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:paddingTop="@dimen/_20dp"
                    android:paddingBottom="@dimen/_20dp"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:textColor="@color/drawer_color"
                    android:textSize="18dp">

                </TextView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>